[package]
name = "korou-lang"
version = "0.1.0"
authors = ["Thalia Nero <chrisvn00@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1.5.4"
bimap = "0.6.2"
